test/fails/bad_parsing/commandless_if.lgl
void main() {
    if (b) { 5; } else { skip; }
}
